style: fixed dark input backgrounds and invisible placeholders on checkout form

--- a/rarefit-ecommerce/client/src/pages/Checkout.css
+++ b/rarefit-ecommerce/client/src/pages/Checkout.css
@@ -58,6 +58,12 @@
   border-radius: 4px;
   font-family: inherit;
   font-size: 1rem;
+  background-color: #ffffff;
+  color: #000000;
+}
+
+.form-input::placeholder {
+  color: #666666;
 }
 
 .form-input:focus {
